2007-08-17  Inge Wallin  <inge@lysator.liu.se>

	Rename KAtlasControl into ControlView:
	* src/katlascontrol.cpp: rename into ControlView.cpp
	* src/katlascontrol.h:   rename into ControlView.h
	* src/KdeMainWindow.{h,cpp}: refer to new name
	* src/MainWindowCommon.cpp: refer to new name
	* src/kdemain.cpp: refer to new name
	* src/lib/CMakeLists.txt: reflect name change
	Note: Tackat will have to do the Qt-only version.
	
2007-08-17  Torsten Rahn  <rahn@kde.org>

    exposing runTimeMarbleDataPath to MarbleWidget's 
    API.

    * src/lib/MarbleWidget.{cpp,h}
    * src/lib/MarbleDirs.cpp

2007-08-17  Torsten Rahn  <rahn@kde.org>

    * src/lib/measuretool.{cpp,h}
    Renaming to MeasureTool.{cpp,h}

2007-08-17  Torsten Rahn  <rahn@kde.org>

    * src/lib/MarbleDirs.cpp:
    Rearranging the code to be more in line with the
    description in MarbleDirs.h.
    Renaming the two marbleDataPaths to something more
    intuitive: compileTimeMarbleDataPath (for the cmake
    version) and runTimeMarbleDataPath (for the version
    that gets modified via the settings).

    * CMakeLists.txt:
    Adjusting the definition of MARBLE_DATA_PATH. -
    Should rather get defined like data_dir gets 
    defined in CMakeList.txt in marble/data, 
    shouldn't it?

2007-08-17  Torsten Rahn  <rahn@kde.org>

    Making naming of the directory paths more consistent
    with Qt/KDE naming scheme: "Dir" names a QDir,
    "Path" the QString of the respective directory name.

    systemDir --> systemPath, localDir --> localPath

    * src/lib/TileCreator.cpp
    * src/lib/placemarkmanager.cpp
    * src/lib/HttpDownloadManager.cpp
    * src/lib/HttpFetchFile.cpp
    * src/lib/maptheme.cpp
    * src/lib/tinywebbrowser.cpp
    * src/lib/MarbleDirs.{cpp,h}:

    Introduced MarbleDataPath as a "static global".

2007-08-16  Inge Wallin  <inge@lysator.liu.se>

	Make the compass work again
	* data/legend.html: Mention compass instead of windrose