@@ -115,6 +115,7 @@ if (QTONLY)
   qt4_automoc(${marble_SRCS})
 else (QTONLY)
   kde4_add_ui_files(marble_SRCS ${marble_UI})
+  kde4_add_kcfg_files(marble_SRCS settings.kcfgc)
 endif (QTONLY)
 
 
@@ -174,6 +175,7 @@ else(WIN32 AND QTONLY)
     if( NOT QTONLY)
       install (TARGETS marble DESTINATION ${BIN_INSTALL_DIR} )
       install( FILES marble.desktop  DESTINATION ${XDG_APPS_INSTALL_DIR})
+      install(FILES marble.kcfg DESTINATION ${KCFG_INSTALL_DIR})
     else( NOT QTONLY)
       install (TARGETS marble DESTINATION bin )
       install( FILES marble.desktop  DESTINATION share/applications)
