@@ -1,0 +1,18 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<kcfg xmlns="http://www.kde.org/standards/kcfg/1.0"
+      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xsi:schemaLocation="http://www.kde.org/standards/kcfg/1.0
+      http://www.kde.org/standards/kcfg/1.0/kcfg.xsd" >
+ <kcfgfile name="marblerc" />
+ <group name="MarbleWidget" >
+  <entry key="homeLongitude" type="Double" >
+   <default>-9.4</default>
+  </entry>
+  <entry key="homeLatitude" type="Double" >
+   <default>54.8</default>
+  </entry>
+  <entry key="homeZoom" type="Int" >
+   <default>1050</default>
+  </entry>
+ </group>
+</kcfg>
