@@ -1,0 +1,4 @@
+ClassName=MarbleSettings
+File=marble.kcfg
+Mutators=true
+Singleton=true
